--- a/docs/swagger/url-shortener.yml
+++ b/docs/swagger/url-shortener.yml
@@ -43,4 +43,5 @@ paths:
           content:
             application/json:
               schema:
-                type: string
+                type: integer
+                format: int64
