--- a/build.gradle
+++ b/build.gradle
@@ -14,29 +14,36 @@ repositories {
 }
 
 dependencies {
+
+    //Annotation Processors
     kapt("io.micronaut:micronaut-http-validation")
     kapt("io.micronaut.data:micronaut-data-document-processor")
     kapt("io.micronaut.openapi:micronaut-openapi")
     kapt("io.micronaut:micronaut-inject-java")
+
+    //Micronaut
     implementation("io.micronaut:micronaut-http-client")
     implementation("io.micronaut:micronaut-jackson-databind")
     implementation("io.micronaut.data:micronaut-data-mongodb")
     implementation("io.micronaut.kotlin:micronaut-kotlin-runtime")
+    implementation("io.micronaut:micronaut-validation")
+    implementation("io.micronaut.mongodb:micronaut-mongo-sync")
+
+    //Kotlin
+    implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
+    runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin")
+
+    //Others
     implementation("io.swagger.core.v3:swagger-annotations")
     implementation("jakarta.annotation:jakarta.annotation-api")
     implementation("org.apache.logging.log4j:log4j-core:2.17.2")
-    implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     runtimeOnly("org.apache.logging.log4j:log4j-api:2.17.2")
     runtimeOnly("org.apache.logging.log4j:log4j-slf4j-impl:2.17.2")
     testImplementation("org.testcontainers:junit-jupiter")
     testImplementation("org.testcontainers:mongodb")
     testImplementation("org.testcontainers:testcontainers")
-    implementation("io.micronaut:micronaut-validation")
     runtimeOnly("org.mongodb:mongodb-driver-sync")
-    implementation("io.micronaut.mongodb:micronaut-mongo-sync")
-
-    runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin")
 
 }
 
