--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,6 +2,9 @@ micronaut:
     application:
         name: urlShortener
 
+mongodb:
+    uri: 'mongodb://127.0.0.1:27017'
+
 netty:
     default:
         allocator:
