--- a/build.gradle
+++ b/build.gradle
@@ -42,11 +42,12 @@ dependencies {
     implementation("com.google.guava:guava:31.1-jre")
     runtimeOnly("org.apache.logging.log4j:log4j-api:2.17.2")
     runtimeOnly("org.apache.logging.log4j:log4j-slf4j-impl:2.17.2")
-    testImplementation("org.testcontainers:junit-jupiter")
-    testImplementation("org.testcontainers:mongodb")
-    testImplementation("org.testcontainers:testcontainers")
     runtimeOnly("org.mongodb:mongodb-driver-sync")
-
+    testImplementation('org.mockito:mockito-junit-jupiter')
+    testImplementation('org.mockito:mockito-inline:4.5.1')
+    testImplementation('org.mock-server:mockserver-junit-jupiter:5.13.2')
+    testImplementation('org.mockito:mockito-core:4.5.1')
+    testImplementation("org.junit.jupiter:junit-jupiter-params")
 }
 
 
