--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 micronaut:
     application:
         name: urlShortener
+    http:
+        client:
+            read-timeout: 20s
 
 netty:
     default:
